--- a/UserCenter/Menu/style.css
+++ b/UserCenter/Menu/style.css
@@ -8,15 +8,19 @@
   line-height: 110px;
   font-size: 40px;
   color: #fff;
-  background-color: #4b4949;
+  /*background-color: #4b4949;*/
+  background: url(../img/header_img.png);
+  background-size: 100% 100px;
 }
 .MainContent {
   display: flex;
   margin-top: 20px;
   border-top: 2px solid #ccc;
+  background: rgba(208, 243, 246, .3)
 }
 .MainMenu {
   min-height: 700px;
+  flex-shrink: 0;
 }
 .MainList {
   width: 100%;
@@ -64,9 +68,17 @@
 .PageAction_list {
   text-align: center;
 }
-.PageAction_list li {
+.PageAction_btn {
   display: inline-block;
-  border: 1px solid #ccc;
-  padding: 0 15px;
+  padding: 10px 15px;
   margin: 0 10px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.LoginOut {
+  float: right;
+  padding-right: 20px;
+  font-size: 20px;
+  cursor: pointer;
 }
