--- a/UserCenter/component/style.css
+++ b/UserCenter/component/style.css
@@ -12,8 +12,9 @@
   border-bottom: 1px solid #ddd;
 }
 .resList_item {
-  width: 200px;
   line-height: 35px;
+  width: 100px;
+  padding: 0 30px;
   font-size: 20px;
   text-align: center;
   overflow: hidden;
